# wikipedia

./: .gitignore  .pre-commit-config.yaml  DAY6_SUMMARY.md  Makefile  README.md  demo.ipynb  features.parquet  justfile  metrics.yaml  pyproject.toml  setup_cli.py  wiki_client.py  wiki_graph.duckdb
.github/workflows/: ci.yml
.wiki_cache/: -1004694056816800044.json  -1018767494555023115.json  -1038594527927808936.json  -1086891971166106506.json  -1099377688399457738.json  -1105627001101734234.json  -1114603386446319528.json  -1115858033327411368.json  -1122672621668868570.json  -1126285818419025169.json  -1139900205554068323.json  -1152917627647299095.json  -1169798798715123211.json  -1185192617755585903.json  -1209312175987871699.json  -1214107942317511417.json  -1230554127141024826.json  -1238465067527985384.json  -1248412537868529778.json  -1252835324855561671.json  -1268539089170305596.json  -1271701093095611510.json  -1281028038967178309.json  -1327218054903014065.json  -132725820866247458.json  -1330621007224256199.json  -1330665512960440757.json  -135105219348181912.json  -1365685694476631830.json  -1388363565413934517.json  -140626893015466940.json  -1409079161218807936.json  -1409140798001188649.json  -1468366718002984296.json  -1474608142552100847.json  -1484318654910097430.json  -1484940709031820957.json  -1512753975012978792.json  -1513604216462958084.json  -1516600256112489944.json  (+930 more)
api/: README.md  api.py  wiki_score.py
cli/: README.md  wiki_score.py
docs/demos/: demo_api_cli.py
docs/summaries/: DAY11_SUMMARY.md  DAY4_SUMMARY.md  DAY5_SUMMARY.md  DAY7_SUMMARY.md  DAY9_SUMMARY.md
examples/: correlation_analysis_example.py  demo_api_cli.py
features/: __init__.py  correlation_analysis.py  extractors.py  linkgraph.py  wikidata.py
models/: README.md  baseline.py  demo_results.json  gbm.pkl  test_gbm.py  train.py  training_results.json  weights.yaml  weights_recalibrated.yaml  weights_temporal_aware.yaml
output/: aggressive_recalibration.json  baseline_recalibration.md  wikidata_validation.json
reports/: aggressive_recalibration.md  baseline_recalibration.json  feature_importance.md  shap_summary.json  temporal_validation.json  temporal_validation.md  wikidata_demo.json
scripts/: aggressive_recalibration.py  analyze_correlations.py  audit_scores.py  bulk_process_wikipedia.py  calibrate_weights.py  demo_baseline.py  demo_correlation_analysis.py  demo_wikidata.py  example.py  generate_features.py  recalibrate_baseline.py  setup_cli.py  shap_analysis.py  temporal_validation.py  validate_model.py  validate_wikidata.py
serve/: api.py
src/ingest/: __init__.py  wiki_client.py
src/wikipedia/: wiki_client.py
src/wikipedia/api/: api.py  wiki_score.py
src/wikipedia/features/: CORRELATION_ANALYSIS.md  linkgraph.py
src/wikipedia/models/: __init__.py  baseline.py  train.py  weights.yaml
src/wikipedia/utils/: data_utils.py
tests/: conftest.py  test_optimization.py
tests/integration/: test_integration.py
tests/unit/: test_baseline.py  test_basic.py  test_correlation_analysis.py  test_extractors.py  test_linkgraph.py  test_wiki_client.py  test_wikidata.py
ui/: README.md  app.js  app.py  index.html  start.sh  styles.css
ui/static/css/: style.css
ui/static/js/: dashboard.js
ui/templates/: dashboard.html
wikipedia/: wiki_client.py
wikipedia/api/: api.py  local_ingest.py  wiki_score.py
wikipedia/features/: correlation_analysis.py  extractors.py  graph_processor.py  linkgraph.py  wikidata.py
wikipedia/models/: baseline.py  gbm.pkl  train.py  training_results.json  validation_results.json  validation_results_v2.json  validation_results_v3.json
