[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "wikipedia"
version = "0.1.0"
description = "Wikipedia article maturity scoring and feature extraction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Wikipedia Quality Team"},
]
keywords = ["wikipedia", "nlp", "machine-learning", "quality-assessment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "requests>=2.31.0",
    "cachetools>=5.3.0",
    "tenacity>=8.2.0",
    "numpy>=1.21.0",
    "networkx>=3.2",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "datasets>=4.5.0",
    "pyarrow>=21.0.0",
    "duckdb>=1.4.4",
    "sqlite-utils>=3.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.31.0",
]
ml = [
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "shap>=0.42.0",
    "matplotlib>=3.7.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]


[project.scripts]
wiki-score = "wikipedia.api.wiki_score:main"
wiki-api = "wikipedia.api.api:app"

[project.urls]
Homepage = "https://github.com/bangyen/wikipedia"
Repository = "https://github.com/bangyen/wikipedia"
Issues = "https://github.com/bangyen/wikipedia/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wikipedia*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

# Ignore missing imports for optional dependencies
[[tool.mypy.overrides]]
module = [
    "networkx",
    "pandas",
    "tqdm",
    "lightgbm",
    "matplotlib.*",
    "flask",
    "flask_cors",
    "yaml",
    "colorama",
    "fastapi",
    "fastapi.*",
    "pydantic",
    "uvicorn",
    "tenacity",
    "numpy",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "integration: integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "venv/*",
    "output/*",
    "examples/*",
]
